030-software/fluxcd/apps/buzz/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: relay
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
    - port: 9102
      targetPort: metrics
      protocol: TCP
      name: metrics
  selector:
    app: relay
---
apiVersion: v1
kind: Service
metadata:
  name: buzz
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: buzz
