030-software/fluxcd/apps/buzz/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: relay
spec:
  hostnames:
  - relay.buzz.${domain}
  parentRefs:
  - name: buzz
    kind: ListenerSet
    group: gateway.networking.k8s.io
    sectionName: relay
  rules:
  - backendRefs:
    - name: relay
      port: 80
    matches:
    - path:
        type: PathPrefix
        value: /
    filters:
    - cors:
        allowOrigins:
        - https://buzz.${domain}
        allowMethods:
        - GET
        - POST
        - OPTIONS
        allowHeaders:
        - DNT
        - X-CustomHeader
        - Keep-Alive
        - User-Agent
        - X-Requested-With
        - If-Modified-Since
        - Cache-Control
        - Content-Type
        allowCredentials: true
        maxAge: 3600
      type: CORS
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: buzz
  annotations:
    dashboard.${domain}/name: buzz
    dashboard.${domain}/url: https://buzz.${domain}
    dashboard.${domain}/icon: slack
spec:
  hostnames:
  - buzz.${domain}
  parentRefs:
  - name: cilium
    namespace: cilium
  rules:
  - backendRefs:
    - name: buzz
      port: 80
    matches:
    - path:
        type: PathPrefix
        value: /
